# moepet

./: .gitignore  AGENTS.md  README.md  main.py  pet_manager.py  requirements-optional.txt  requirements.txt  setup.ps1  tts-assets.manifest.json
characters/noir/: animations.json  config.json
characters/noir/sprites/: README.md
characters/noir/sprites/live2d/NOIR/: noir.vtube.json
characters/noir/voice/: noir_cpu.yaml
characters/nuowa/: animations.json  config.json
characters/nuowa/sprites/: README.md
core/: animation.py  asr_service.py  character.py  character_scaffold.py  config.py  expression.py  hotkeys.py  knowledge_base.py  llm_service.py  ocr_service.py  openai_compat.py  pet_manager.py  pet_window.py  screen_observer.py  settings_window.py  signals.py  sprite_normalizer.py  startup.py  tts_service.py  vision_service.py  voice_input.py  workers.py
core/memory/: __init__.py  analyzer.py  native.py  store.py
datasets/: noir_character_profile.md  noir_dialogue_examples.json  noir_world_background.md  xingkong_train_dialogue_examples.json
native/memory_core/: Cargo.toml  pyproject.toml
native/memory_core/src/: lib.rs
tests/: test_config_and_animation.py  test_memory_system.py  test_sprite_animation.py
tools/: build_dialogue_dataset.py  build_noir_dialogue_dataset.py  cubism_bridge.py
ui/: dialog_window.py  live2d_window.py  pet_window.py  settings_components.py  settings_window.py  theme.py  tray_icon.py
ui/settings/: __init__.py  memory_page.py  pages.py  persistence.py  probes.py  provider_presets.py  service_status.py
(+3 files in other folders)
