[package]
name = "moepet_memory_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "moepet_memory_core"
crate-type = ["cdylib"]

[dependencies]
blake3 = "1.5"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
